--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
 			"type": "dart",
 			"args": [
                 "--dart-define",
-                "FLAVOR=production",
+                "environment=production",
             ]
 		},
 	]
